extends Node2D

@onready var dash_sound: AudioStreamPlayer = $DashSound
@onready var sword_sound: AudioStreamPlayer = $SwordSound
@onready var coin_pickup_sound: AudioStreamPlayer = $CoinPickupSound
@onready var hatch_open_sound: AudioStreamPlayer = $HatchOpenSound
@onready var player_damage_sound: AudioStreamPlayer = $PlayerDamageSound
